--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://utsavgoel.github.io",
+  "homepage": "https://utsavgoel.github.io/",
   "name": "utsavgoel",
   "version": "0.1.0",
   "private": true,
